--- a/docs/howtos/solutions/common-data/microservices-arch-with-redis.mdx
+++ b/docs/howtos/solutions/common-data/microservices-arch-with-redis.mdx
@@ -1,4 +1,4 @@
-The e-commerce microservices application uses the following architecture:
+The e-commerce microservices application discussed in the rest of this tutorial uses the following architecture:
 
 1. `products service` - handles querying products from the database and returning them to the frontend
 1. `orders service` - handles validating and creating orders
