adjusting caching title

--- a/docs/howtos/solutions/caching/index-caching.mdx
+++ b/docs/howtos/solutions/caching/index-caching.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-solutions-caching
-title: How to use Redis as a Query Caching
-sidebar_label: How to use Redis as a Query Caching
+title: How to use Redis for Query Caching
+sidebar_label: How to use Redis for Query Caching
 slug: /howtos/solutions/caching
 authors: [prasan, will]
 ---
