--- a/docs/howtos/solutions/interservice-communication/index-interservice-communication.mdx
+++ b/docs/howtos/solutions/interservice-communication/index-interservice-communication.mdx
@@ -50,7 +50,6 @@ Redis Streams offers simplicity in both development and operations, especially w
 
 :::
 
-
 ## Using Redis for Interservice Communication in an Event-driven Architecture
 
 Below is an event flow diagram that outlines how the `orders service` and `payments service` communicate through Redis with streams.
@@ -401,3 +400,4 @@ That's all there is to it! You've now seen how to use Redis for streaming as bot
 - [API gateway caching](/howtos/solutions/api-gateway-caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
+- [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
