--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -43,6 +43,7 @@ Past events:
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Friday, March 10       | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 5][91]                                           | 
 | Friday, March 3        | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 4][90]                                           |
 | Thursday, March 2      | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 4][89]                    |
 | Friday, February 24    | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 3][88]                    |
@@ -184,6 +185,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[91]: https://www.youtube.com/watch?v=4fqqgVpbVtI
 [90]: https://www.youtube.com/watch?v=23wgOHLX68c
 [89]: https://www.youtube.com/watch?v=fYnrNqSgqR4
 [88]: https://www.youtube.com/watch?v=IEx2WgWdhIA
