Adds IoT stream March 23.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,6 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Thursday, March 23      | 3pm UTC      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 6][twitch]                                   |
 
   </TabItem>
   <TabItem value="recurring">
