github code tip change, additional resource link added

--- a/docs/howtos/solutions/digital-identity-validation/index-digital-identity-validation.mdx
+++ b/docs/howtos/solutions/digital-identity-validation/index-digital-identity-validation.mdx
@@ -23,7 +23,7 @@ import SourceCode from '../common-data/microservices-source-code-tip.mdx';
 KYC regulations are intended to prevent money laundering, terrorist financing, and other illicit activities.
 Financial services companies are combating the use of stolen identity information by reducing reliance on static methods for verifying identity (Knowledge-Based Authentication - KBA) and instead moving to Digital Identities.
 
-## Digital identities
+## What is Digital identity?
 
 Digital identity refers to a set of attributes, credentials, and data that uniquely identify an individual or entity in the digital world, merging the physical and the online aspects of their identity.
 
@@ -208,8 +208,7 @@ Digital identity score along with user profile score and AI (Artificial Intellig
 
 ### Additional Resources
 
-<!-- TODO: add link for TransactionRiskScoring tutorial -->
-
+- [Transaction Risk Scoring](/howtos/solutions/transaction-risk-scoring)
 - [CQRS](/howtos/solutions/cqrs)
 - [Interservice communication](/howtos/solutions/interservice-communication)
 - [Query caching](/howtos/solutions/caching)
