--- a/docs/howtos/solutions/common-data/microservices-source-code-tip.mdx
+++ b/docs/howtos/solutions/common-data/microservices-source-code-tip.mdx
@@ -1,7 +1,7 @@
 :::tip GITHUB CODE
 
-Below is a link to the source code for the application used in this tutorial
+Below is a command to the clone the source code for the application used in this tutorial
 
-https://github.com/redis-developer/redis-microservices-ecommerce-solutions
+git clone --branch v1.0.0 https://github.com/redis-developer/redis-microservices-ecommerce-solutions
 
 :::
