grouping solutions and an overview page

--- a/docs/howtos/solutions/fraud-detection/digital-identity-validation/index-digital-identity-validation.mdx
+++ b/docs/howtos/solutions/fraud-detection/digital-identity-validation/index-digital-identity-validation.mdx
@@ -2,15 +2,16 @@
 id: index-digital-identity-validation
 title: How to perform Digital Identity Validation using Redis in an e-commerce app
 sidebar_label: How to use Redis for Digital Identity Validation
-slug: /howtos/solutions/digital-identity-validation
+slug: /howtos/solutions/fraud-detection/digital-identity-validation
 authors: [prasan, will]
 ---
 
 import Authors from '@theme/Authors';
 import digitalIdentityImg from './images/digital-identity.png';
-import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
-import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
-import SourceCode from '../common-data/microservices-source-code-tip.mdx';
+
+import MicroservicesEcommerceDesign from '../../microservices/common-data/microservices-ecommerce.mdx';
+import MicroservicesArchitectureWithRedis from '../../microservices/common-data/microservices-arch-with-redis.mdx';
+import SourceCode from '../../microservices/common-data/microservices-source-code-tip.mdx';
 
 <Authors frontMatter={frontMatter} />
 
@@ -208,11 +209,11 @@ Digital identity score along with user profile score and AI (Artificial Intellig
 
 ### Additional Resources
 
-- [Transaction Risk Scoring](/howtos/solutions/transaction-risk-scoring)
-- [CQRS](/howtos/solutions/cqrs)
-- [Interservice communication](/howtos/solutions/interservice-communication)
-- [Query caching](/howtos/solutions/caching)
-- [API gateway caching](/howtos/solutions/api-gateway-caching)
+- [Transaction Risk Scoring](/howtos/solutions/fraud-detection/transaction-risk-scoring)
+- [CQRS](/howtos/solutions/microservices/cqrs)
+- [Interservice communication](/howtos/solutions/microservices/interservice-communication)
+- [Query caching](/howtos/solutions/microservices/caching)
+- [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
