--- a/docs/howtos/solutions/microservices/api-gateway-caching/index-api-gateway-caching.mdx
+++ b/docs/howtos/solutions/microservices/api-gateway-caching/index-api-gateway-caching.mdx
@@ -2,7 +2,7 @@
 id: index-solutions-api-gateway-caching
 title: How to use Redis for API Gateway Caching
 sidebar_label: How to use Redis for API Gateway Caching
-slug: /howtos/solutions/api-gateway-caching
+slug: /howtos/solutions/microservices/api-gateway-caching
 authors: [prasan, will]
 ---
 
@@ -195,9 +195,9 @@ That's all there is to it! You've now seen how to use Redis for API gateway cach
 
 ### Additional Resources
 
-- [CQRS](/howtos/solutions/cqrs)
-- [Interservice communication](/howtos/solutions/interservice-communication)
-- [Query caching](/howtos/solutions/caching)
+- [CQRS](/howtos/solutions/microservices/cqrs)
+- [Interservice communication](/howtos/solutions/microservices/interservice-communication)
+- [Query caching](/howtos/solutions/microservices/caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
