--- a/docs/howtos/solutions/microservices/caching/index-caching.mdx
+++ b/docs/howtos/solutions/microservices/caching/index-caching.mdx
@@ -2,7 +2,7 @@
 id: index-solutions-caching
 title: How to use Redis for Query Caching
 sidebar_label: How to use Redis for Query Caching
-slug: /howtos/solutions/caching
+slug: /howtos/solutions/microservices/caching
 authors: [prasan, will]
 ---
 
@@ -280,9 +280,9 @@ That's all there is to it! You've now seen how to use Redis for caching with one
 
 ### Additional Resources
 
-- [CQRS](/howtos/solutions/cqrs)
-- [Interservice communication](/howtos/solutions/interservice-communication)
-- [API gateway caching](/howtos/solutions/api-gateway-caching)
+- [CQRS](/howtos/solutions/microservices/cqrs)
+- [Interservice communication](/howtos/solutions/microservices/interservice-communication)
+- [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
